5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1675_1952.log
== TEST (2019-04-30 11:33:28) 
-- CODE:
s = float(intput())

if s >=1659.38:
	s = s - s*0.08
elif s>1659.38 and s>=2765.66:
	s = s - s*0.09
elif s>2765.66 and s>=5531.31:
	s = s - s*0.11
else:
	s = s - 608.44

if  s>1903.98 and s<=2826.65:
	s = s - s*0.075
elif s>2826.65 and s<=3751.05:
	s = s - s*0.15
elif s>3751.05 and s<=4664.68:
	s = s - s*0.225
elif s>4664.68:
	s = s - s*0.275

print("Salario liquido = R$",s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s = float(intput())
NameError: name 'intput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:33:45) 
-- CODE:
s = float(input())

if s >=1659.38:
	s = s - s*0.08
elif s>1659.38 and s>=2765.66:
	s = s - s*0.09
elif s>2765.66 and s>=5531.31:
	s = s - s*0.11
else:
	s = s - 608.44

if  s>1903.98 and s<=2826.65:
	s = s - s*0.075
elif s>2826.65 and s<=3751.05:
	s = s - s*0.15
elif s>3751.05 and s<=4664.68:
	s = s - s*0.225
elif s>4664.68:
	s = s - s*0.275

print("Salario liquido = R$",s)
	
-- OUTPUT:
Salario liquido = R$ 626.1199999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:34:55) 
-- CODE:
s = float(input())

if s <=1659.38:
	s = s - s*0.08
elif s>1659.38 and s<=2765.66:
	s = s - s*0.09
elif s>2765.66 and s<=5531.31:
	s = s - s*0.11
else:
	s = s - 608.44

if  s>1903.98 and s<=2826.65:
	s = s - s*0.075
elif s>2826.65 and s<=3751.05:
	s = s - s*0.15
elif s>3751.05 and s<=4664.68:
	s = s - s*0.225
elif s>4664.68:
	s = s - s*0.275

print("Salario liquido = R$",round(s,2))
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:35:05) 
-- CODE:
s = float(input())

if s <=1659.38:
	s = s - s*0.08
elif s>1659.38 and s<=2765.66:
	s = s - s*0.09
elif s>2765.66 and s<=5531.31:
	s = s - s*0.11
else:
	s = s - 608.44

if  s>1903.98 and s<=2826.65:
	s = s - s*0.075
elif s>2826.65 and s<=3751.05:
	s = s - s*0.15
elif s>3751.05 and s<=4664.68:
	s = s - s*0.225
elif s>4664.68:
	s = s - s*0.275

print("Salario liquido = R$",round(s,2))
	
-- EXECUTION TIME:
0.204243
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3571.76
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
